--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ava": "^0.18.1",
     "coveralls": "^2.11.8",
     "nyc": "^10.1.2",
-    "superagent-mock": "^3.2.0"
+    "superagent-mock": "3.5.0"
   },
   "dependencies": {
     "superagent": "^3.4.1"
